<resources>
    <string name="app_name">Nutrition Application</string>

    <string name="author_name">Author: Jaime Vargas</string>
    <string name="app_info">Software Version: Android studio 3.0.1</string>
    <string name="minimum_API">Minimum SDK: 19</string>
    <string name="help">Help available at: </string>
    <string name="help_title">HELP PAGE</string>
    <string name="URL_help">http://www.google.com</string>
    <string name="button_back">Go Back</string>

    <string name="recipe_hint">Enter Recipe Name</string>
    <string name="ingredient_hint">Enter New Ingredient</string>
    <string name="add">add</string>
    <string name="recipe_description">Enter the recipe description</string>
    <string name="title_activity_recipe_list">recipeList</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="current_recipes">Your Recipes</string>
    <string name="calories">Calories</string>
    <string name="optional">Optional</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="title_activity_edit_recipe">editRecipe</string>
    <string name="edit">Edit</string>
    <string name="ingredient">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="day">Day</string>
    <string name="meal">Meal</string>


</resources>
